fix overflow problem caused by aos slide for featured work and portfolio

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -34,16 +34,20 @@
 }
 
 .featuredwork {
+	overflow: hidden;
 
 	&__1 {
+		padding-top: 10px;
 		margin-bottom: 20px;
 	}
 
 	&__2 {
+		padding-top: 10px;
 		margin-bottom: 20px;
 	}
 
 	&__3 {
+		padding-top: 10px;
 		margin-bottom: 20px;
 	}
 
