--- a/src/styles/_portfolio.scss
+++ b/src/styles/_portfolio.scss
@@ -2,22 +2,27 @@
 
 .featuredwork {
 	&__4 {
+		padding-top: 20px;
 		margin-bottom: 20px;
 	}
 
 	&__5 {
+		padding-top: 20px;
 		margin-bottom: 20px;
 	}
 
 	&__6 {
+		padding-top: 20px;
 		margin-bottom: 20px;
 	}
 
 	&__7 {
+		padding-top: 20px;
 		margin-bottom: 20px;
 	}
 
 	&__8 {
+		padding-top: 20px;
 		margin-bottom: 20px;
 	}
 }
